# fc-workshop-track-2

./: .env.example  .gitignore  README.md  afternoon_session.ipynb  afternoon_session.py  morning_session.ipynb  morning_session.py  pyproject.toml  requirements.txt
workshop/: afternoon_session_utils.py  agent_converter.py  agent_system.py  command.py  command_evaluator.py  config.py  day_seed_generator.py  scenarios.py  service_management.py  session_utils.py  state_management.py  state_models.py  suppression.py
workshop/deprecated_utils/: __init__.py  advanced_patterns.py  agent_profiles.py  agents.py  service_tools.py  tool_registry.py
workshop/services/: emergency_api.py  grid_api.py  scenario_api.py  traffic_api.py
